Update author information and improve SEO

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Youssef El Abbassi's blog. Projects, code, and ideas. Building tools and being introspective.">
-    <title>Youssef El Abbassi</title>
+    <meta name="description" content="youssef el abbassi's blog.">
+    <title>youssef el abbassi</title>
     <link rel="stylesheet" href="style.css">
     <link rel="canonical" href="https://elabbassi.com">
-    <link rel="alternate" type="application/rss+xml" title="Oh My Blog RSS" href="feed.xml">
+    <link rel="alternate" type="application/rss+xml" title="Youssef El Abbassi's Blog RSS" href="feed.xml">
 </head>
 <body>
     <header>
-        <h1>Youssef El Abbassi</h1>
-        <p class="intro">Projects, code, and ideas</p>
+        <h1>youssef el abbassi</h1>
+
     </header>
     <main>
         <ul class="posts-list">
@@ -24,7 +24,7 @@
         </ul>
     </main>
     <footer>
-        <p>Youssef El Abbassi · <a href="feed.xml">RSS</a></p>
+        <p> <a href="mailto:youssef@elabbassi.com">youssef@elabbassi.com</a></p>
     </footer>
 </body>
 </html>
