--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </ul>
     </main>
     <footer>
-        <p> <a href="mailto:youssef@elabbassi.com">youssef@elabbassi.com</a></p>
+         <a href="https://github.com/yelabb">Github</a> -
+        <a href="mailto:elabbassi.com">Email</a>
     </footer>
 </body>
 </html>
