--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </main>
     <footer>
          <a href="https://github.com/yelabb">Github</a> -
-        <a href="mailto:elabbassi.com">Email</a>
+        <a href="mailto:youssef@elabbassi.com">Email</a>
     </footer>
 </body>
 </html>
